# shery_todo_app

./: .gitignore  ADVANCED_FEATURES.md  AUTH_PAGES_COMPLETE.md  BACKEND_AUTH_COMPLETE.md  CREDENTIALS_BEST_PRACTICES.md  DASHBOARD_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOY_TO_HUGGINGFACE.md  EDIT_TASK_COMPLETE.md  EMAIL_SETUP.md  ENV_CREDENTIALS_TEMPLATE.md  FEATURES_COMPLETE.md  GETTING_STARTED.md  GITHUB_SETUP.md  MILESTONE1_COMPLETE.md  MILESTONE2_COMPLETE.md  PHASE1_STATUS.md  PHASE2_STATUS.md  PHASE_COMPLETION_PLAN.md  PHASE_INTEGRATION.md  PROJECT_COMPLETE.md  README.md  RESTRUCTURE_SUMMARY.md  SETUP_WITH_NEON_OPENAI_QDRANT.md  SIGNUP_PAGE_COMPLETE.md  START_PROJECT.md  TASK_MANAGEMENT_COMPLETE.md  WAKE_UP_SUMMARY.md  WHATSAPP_SETUP.md  cookies.txt  docker-compose.yml  pyproject.toml  setup.ps1  setup.sh  temp_feature_desc.txt  test-signup.html
.claude/: settings.local.json
.github/workflows/: deploy.yml
.specify/agents/: QUICK_REFERENCE.md  README.md  ai-engineer.md  backend-engineer.md  data-migration.md  file-persistence.md  frontend-engineer.md  qa-testing.md  serena.md  token-checker.md
.specify/memory/: constitution.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  add_recurring_tasks.py  add_task_reminders.py  alembic.ini  chatbot_test_response.json  check_and_fix_schema.py  create_missing_tables.py  fix_schema.py  pyproject.toml  recreate_users_table.py  test_auth_simple.py  test_browser_signup.py  test_chatbot.py  test_complete_flow.py  test_existing_user_signin.py  test_final_browser_flow.py  test_frontend_signup.py  test_results.txt  test_signin.py  test_signin_wrong_password.py  test_signup.py  validate_auth.py
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  20251226_001_initial_schema.py  20251227_001_create_users_sessions.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  events.py  main.py  security.py
backend/app/models/: __init__.py  account.py  base.py  session.py  task.py  user.py
backend/app/routers/: __init__.py  auth.py  chatbot.py  tasks.py
backend/app/schemas/: __init__.py  auth.py  task.py
backend/app/services/: __init__.py  auth_service.py  email.py  email_notifications.py  file_storage.py  qdrant.py  reminder_checker.py  whatsapp.py
backend/app/utils/: errors.py
backend/tests/: __init__.py  conftest.py  test_auth_service.py  test_config.py  test_database.py  test_dependencies.py  test_errors.py  test_main.py  test_setup.py
backend/tests/models/: test_base.py  test_user.py
backend/tests/services/: test_email.py  test_file_storage.py
chatbot/: .env.example  Dockerfile  pyproject.toml
chatbot/app/: __init__.py  agent.py  main.py  mcp_server.py
cli/: README.md  pyproject.toml
cli/tests/: __init__.py  conftest.py
cli/tests/integration/: test_cli_commands.py
cli/tests/unit/: __init__.py  test_models.py
cli/todo_cli/: __init__.py  commands.py  interactive.py  main.py  models.py  repository.py
docs/: PRODUCTION_DEPLOYMENT.md  README.md
frontend/: .dockerignore  .env.local.example  .gitignore  Dockerfile  README.md  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chatbot/: page.tsx
frontend/app/cli/: page.tsx
frontend/app/tasks/: page.tsx
frontend/components/auth/: ForgotPasswordForm.tsx  ResetPasswordForm.tsx  SigninForm.tsx  SignupForm.tsx  VerifyEmailForm.tsx
frontend/components/chatbot/: FloatingChatbot.tsx
frontend/components/dashboard/: QuickActions.tsx  StatsOverview.tsx  TasksDashboard.tsx
frontend/components/kanban/: KanbanBoard.tsx  TaskCard.tsx
frontend/components/tasks/: CreateTaskForm.tsx  CreateTaskModal.tsx  EditTaskModal.tsx  TaskCard.tsx  TaskItem.tsx  TaskList.tsx
frontend/contexts/: AuthContext.tsx
frontend/hooks/: useAuth.ts
frontend/lib/: api-client.ts  api-types.ts  query-client.ts  task-client.ts
frontend/tests/: setup.test.ts
frontend/types/: auth.ts  index.ts  task.ts
history/adr/: 001-id-migration-strategy.md  002-monorepo-structure.md  003-database-choice-neon-postgresql.md  004-authentication-strategy-better-auth.md  005-deployment-strategy-huggingface-spaces.md
history/prompts/001-cli-todo-app/: 001-phase1-cli-todo-spec.spec.prompt.md  002-phase1-implementation-plan.plan.prompt.md  003-task-breakdown-generation.tasks.prompt.md  004-implement-phase1-cli-mvp.green.prompt.md  005-mcp-tools-design.plan.prompt.md
history/prompts/001-project-management-system/: 001-specification-analysis-report.tasks.prompt.md
history/prompts/constitution/: 001-evolution-todo-constitution-v1.constitution.prompt.md
history/prompts/fullstack-web/: 001-deployment-strategy-huggingface-spaces.spec.prompt.md  002-implementation-planning.plan.prompt.md  (+1 more)
infra/dapr/: dapr-config.yaml
infra/kafka/: kafka.yaml
k8s/: backend.yaml  chatbot.yaml  configmap.yaml  deploy-cloud.sh  deploy-minikube.sh  deploy.sh  frontend.yaml  namespace.yaml  postgres.yaml  secrets.yaml
k8s/base/: backend-deployment.yaml  frontend-deployment.yaml  ingress.yaml  namespace.yaml  postgres-deployment.yaml  secrets.yaml
k8s/dapr/: dapr-backend-sidecar.yaml  dapr-components.yaml
k8s/kafka/: kafka-deployment.yaml
scripts/: deployment-checklist.md  test-production.py  verify-env.py
shared/: README.md
specs/001-cli-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-project-management-system/: REMEDIATION-PLAN.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  tasks.md.backup
specs/002-fullstack-web/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/todo_cli/: utils.py
tests/: conftest.py
tests/integration/: __init__.py
tests/unit/: test_repository.py
(+24 files in other folders)
