[project]
name = "todo-cli"
version = "0.1.0"
description = "Phase 1 CLI Todo App with in-memory storage and JSON persistence"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "pyright>=1.1.0",
]

[project.scripts]
todo = "todo_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["todo_cli"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "C90"]
ignore = []

[tool.ruff.mccabe]
max-complexity = 10

[tool.pyright]
strict = true
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=todo_cli --cov-report=term-missing --cov-report=html"
