[project]
name = "taskflow-cli"
version = "1.0.0"
description = "Professional Todo CLI App with ALL 10 features - priorities, tags, search, filter, sort, recurring tasks, due dates"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Shery", email = "shery@example.com"},
]
keywords = ["todo", "cli", "task", "productivity", "hackathon"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "pyright>=1.1.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.scripts]
todo = "todo_cli.main:main"
taskapp = "todo_cli.interactive:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["todo_cli"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "C90"]
ignore = []

[tool.ruff.mccabe]
max-complexity = 10

[tool.pyright]
strict = true
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=todo_cli --cov-report=term-missing --cov-report=html"
